# llm_workbench

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_BATCHES.md  README.md
docs/: IMPLEMENTATION_BATCHES.md  UI_ARCHITECTURE.md  goal.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: chat.ts  health.ts  llm.ts  notes.ts  settings.ts  workspace.ts
frontend/src/components/: AgentConfigPane.vue  ChatPane.vue  MathRenderer.test.ts  MathRenderer.vue  MixedContentRenderer.test.ts  MixedContentRenderer.vue  NoteEditorPane.vue  TiptapNoteEditor.test.ts  TiptapNoteEditor.vue  WorkspacePage.vue  WorkspaceTree.vue
frontend/src/router/: index.ts
frontend/src/stores/: health.ts  notes.ts  settings.ts  workspace.ts
frontend/src/ui/: README.md  WbButton.vue  WbContextMenu.vue  WbContextMenuItem.vue  WbDropdownMenu.vue  WbIconButton.vue  WbMenuItem.vue  components.css  index.ts  tokens.css
frontend/src/utils/: math.test.ts  math.ts
frontend/src/views/: LlmSettingsPane.vue  MathDemo.vue  (+5 more)
migrations/: 20260513000100_create_settings.sql  20260513000200_create_workspace_items.sql  20260513000300_create_notes.sql  20260513000400_create_conversations.sql  20260513000500_create_llm.sql  20260513000600_create_prompt_blocks.sql  20260513000700_create_agents.sql
scripts/: backend.cmd  frontend.cmd  migrate.cmd  test.cmd
src/: agents.rs  config.rs  conversations.rs  db.rs  error.rs  health.rs  lib.rs  llm.rs  main.rs  notes.rs  prompt_blocks.rs  settings.rs  state.rs  workspace.rs
